IG-1242 Preventing urls bleeding in entity pages

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1600,3 +1600,7 @@ button a {
 	margin-left: 15px;
 	margin-right: 12px;
 }
+
+.wordBreakAll {
+	word-break: break-all;
+}
